# robotic-arm-complex

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  ROADMAP.md
cli/: Cargo.toml
common/: Cargo.toml
common/src/: lib.rs  mechanics_config.rs  quantities.rs  request.rs  response.rs  units.rs  wifi_config.rs
firmware/: Cargo.toml  partitions.csv
firmware/.cargo/: config.toml
firmware/src/: connectors.rs  core_0.rs  core_1.rs  main.rs  utils.rs
firmware/src/core_0/: configurator.rs  connectors.rs  network.rs
firmware/src/core_0/configurator/: conf_stor.rs
firmware/src/core_0/configurator/conf_stor/: flash_async.rs  utils.rs
firmware/src/core_0/network/: api.rs  connectors.rs  link.rs  manager.rs  transport.rs
firmware/src/core_1/: positioner.rs
firmware/src/core_1/positioner/: mechanics.rs  utils.rs
firmware/src/core_1/positioner/mechanics/: pwm.rs  servo_motor.rs
