[package]
name         = "cli"
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
authors      = { workspace = true }
repository   = { workspace = true }
homepage     = { workspace = true }

[dependencies]
common = {path="../common"}
tokio  = { version = "1", features = ["full"] }