[package]
name         = "common"
version      = { workspace = true }
edition      = { workspace = true }
rust-version = "1.90"
license      = { workspace = true }
authors      = { workspace = true }
repository   = { workspace = true }
homepage     = { workspace = true }

[dependencies]
serde    = { version = "1.0.*", default-features = false}
postcard = { version = "1.1.*", features=["experimental-derive"]}
heapless = { version = "0.9.*", features=["serde"]}
libm     = "0.2.15"
enumset  = { version = "1.1.10", features=["serde"]}