[package]
name         = "common"
version      = { workspace = true }
edition      = { workspace = true }
rust-version = "1.90"
license      = { workspace = true }
authors      = { workspace = true }
repository   = { workspace = true }
homepage     = { workspace = true }

[dependencies]
enumset  = { version = "1.1.10", default-features = false, features=["serde"]}
heapless = { version = "0.9.*", default-features = false, features=["serde"]}
libm     = { version = "0.2.15", default-features = false}
postcard = { version = "1.1.*", default-features = false, features=["heapless","experimental-derive"]}
serde    = { version = "1.0.*", default-features = false}