[package]
name         = "firmware"
version      = "0.1.0"
edition      = "2024"
rust-version = "1.90"
license      = "MIT OR Apache-2.0"
authors      = ["guamoko995 guamoko95@gmail.com"]
repository   = "https://github.com/guamoko995/robotic-arm-complex"
homepage     = "https://github.com/guamoko995/robotic-arm-complex"

[[bin]]
name = "firmware"
path = "./src/main.rs"

[dependencies]
common = {path="../common"}
embedded-io-async = { version = "0.6.1", default-features = false }
embedded-hal = "1.0.0"
embedded-storage = { version = "0.3.1", default-features = false }
embedded-storage-async = { version = "0.4.1", default-features = false }
embassy-executor = { version = "0.9.1", default-features = false}
embassy-futures = { version = "0.1.2", default-features = false }
embassy-net = { version = "0.7.1", default-features = false, features = ["medium-ethernet","proto-ipv4","dhcpv4","tcp"] }
embassy-sync = { version = "0.7.2", default-features = false}
embassy-time = { version = "0.5.0", default-features = false}
enumset = { version = "1.1.10", features=["serde"]}
esp-alloc = { version = "0.9.0", default-features = false}
esp-bootloader-esp-idf = { version = "0.4.0", default-features = false, features = ["esp32"] }
esp-hal  = { version = "1.0.0", default-features = false, features = ["unstable","critical-section"] }
esp-println = { version = "0.16.1", default-features = false, features = ["auto","defmt-espflash","esp32"] }
esp-radio = { version = "0.17.0", default-features = false, features = ["esp-alloc","esp32","wifi"] }
esp-rtos = { version = "0.2.0", default-features = false, features = ["embassy","esp-radio","esp32"] }
esp-storage = { version = "0.7.0", default-features = false, features = ["esp32"] }
leasehund = { version = "0.2.0", default-features = false }
libm = { version = "0.2.15", default-features = false }
postcard = { version = "1.1.*", features=["heapless","experimental-derive"]}
sequential-storage = { version = "7.1.0", default-features = false }
static_cell = { version = "2.1.1", default-features = false }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false

[workspace]